# Kintsugi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  docker_build.sh  kintsugi.sh
crates/ai/: Cargo.toml
crates/ai/src/: config.rs  dsp.rs  lib.rs  model.rs  postprocess.rs  preprocess.rs  tensor_audio.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: lib.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs
python/: .gitignore  README.md  requirements-cpu.txt  requirements-cuda.txt  requirements.txt
python/models/: htdemucs_cuda_manifest.json  htdemucs_manifest.json
python/scripts/: export_model.py
