[workspace]
resolver = "3"
members = ["crates/core", "crates/io", "crates/ai", "crates/dsp", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.102"
symphonia = { version = "0.5.5", features = ["mp3", "aac", "isomp4"] }
hound = "3.5.1"
tch = "0.14"